jest.mock("@/data/ts-queries/library");
jest.mock("sonner");

import { screen, waitFor } from "@testing-library/react";
import userEvent from "@testing-library/user-event";
import {
   assertHasAttributeWithValue,
   assertInDocument,
   assertNotInDocument,
   ctestData,
   dtestData,
   renderWithReactQuery,
} from "@tests";
import { toast } from "sonner";

import {
   useCreateCollection,
   useLoadEntryCollectionIds,
   useUpdateEntryCollections,
} from "@/data/ts-queries/library";
import {
   LoadCollectionIdsParams,
   UpdateCollectionIdsParams,
} from "@/data/ts-queries/library/types";
import { ActionResult } from "@/data/types/utils";

import { AddToLibraryCollectionDialog } from "./add-to-library-collection-dialog";

type UseUpdateEntryCollectionsResult = ReturnType<
   typeof useUpdateEntryCollections
>;

type UseCreateCollectionResult = ReturnType<typeof useCreateCollection>;

type UseLoadEntryCollectionIdsResult = ReturnType<
   typeof useLoadEntryCollectionIds
>;

const toastMock = toast as jest.MockedFunction<typeof toast>;
const useUpdateEntryCollectionsMock =
   useUpdateEntryCollections as jest.MockedFunction<
      typeof useUpdateEntryCollections
   >;
const useLoadEntryCollectionIdsMock =
   useLoadEntryCollectionIds as jest.MockedFunction<
      typeof useLoadEntryCollectionIds
   >;
const useCreateCollectionMock = useCreateCollection as jest.MockedFunction<
   typeof useCreateCollection
>;

const updateMutationResultMock = (
   mutateFn = jest.fn()
): UseUpdateEntryCollectionsResult => {
   const result = ctestData.useMutationResultMock(mutateFn);
   return result as UseUpdateEntryCollectionsResult;
};

const createMutationResultMock = (): UseCreateCollectionResult => {
   const result = ctestData.useMutationResultMock();
   return result as UseCreateCollectionResult;
};

const mutationObserverLoadingResultMock =
   (): UseUpdateEntryCollectionsResult => {
      const result = ctestData.useMutationObserverLoadingResult();
      return result as unknown as UseUpdateEntryCollectionsResult;
   };

const queryResultMock = (
   data: string[] | undefined = undefined,
   isLoading = false
): UseLoadEntryCollectionIdsResult => {
   return { data, isLoading } as UseLoadEntryCollectionIdsResult;
};

const assertDialogRendered = () => {
   const dialog = screen.getByTestId("add-to-collection-dialog");
   assertInDocument(dialog);
};

const assertDialogNotRendered = () => {
   const dialog = screen.queryByTestId("add-to-collection-dialog");
   assertNotInDocument(dialog);
};

const assertCreateCollectionDialogRendered = () => {
   const createDialog = screen.getByTestId("create-library-collection-dialog");
   assertInDocument(createDialog);
};

const assertCreateCollectionDialogNotRendered = () => {
   const createDialog = screen.queryByTestId(
      "create-library-collection-dialog"
   );
   assertNotInDocument(createDialog);
};

const assertEntityCollectionIdsLoadingRendered = () => {
   const loading = screen.getByTestId("collections-loading");
   assertInDocument(loading);
};

const assertCollectionsEmptyRendered = () => {
   const empty = screen.getByTestId("collections-empty");
   assertInDocument(empty);
};

const assertSaveBtnDisabled = () => {
   const saveBtn = screen.getByTestId("save-btn");
   assertHasAttributeWithValue(saveBtn, "disabled", "");
};

const assertEntryCollectionIdsLoaded = (entryId: string, enabled: boolean) => {
   const expectedParams: LoadCollectionIdsParams = {
      entryId,
      enabled,
   };
   expect(useLoadEntryCollectionIdsMock).toHaveBeenCalledTimes(1);
   expect(useLoadEntryCollectionIdsMock).toHaveBeenCalledWith(expectedParams);
};

describe("AddToLibraryCollectionDialog rendering tests", () => {
   beforeEach(() => {
      jest.clearAllMocks();

      const mutationResult = createMutationResultMock();
      useCreateCollectionMock.mockReturnValue(mutationResult);
   });

   it("AddToLibraryCollectionDialog - open true - test", async () => {
      const mutationResult = updateMutationResultMock();
      const queryResult = queryResultMock();

      useUpdateEntryCollectionsMock.mockReturnValue(mutationResult);
      useLoadEntryCollectionIdsMock.mockReturnValue(queryResult);

      const entry = dtestData.dLibraryEntry();
      const allCollections = dtestData.dLibraryCollections(6);
      allCollections[0].color = null;

      const { container } = renderWithReactQuery(
         <AddToLibraryCollectionDialog
            entry={entry}
            collections={allCollections}
            open={true}
            onOpenChange={jest.fn()}
         />
      );

      await waitFor(() => {
         assertDialogRendered();
         assertEntryCollectionIdsLoaded(entry.id, true);
      });

      expect(container).toMatchSnapshot();
   });

   it("AddToLibraryCollectionDialog - open true - isLoading true - test", async () => {
      const entryCollectionIds = dtestData.dLibraryCollectionIds(3);
      const mutationResult = updateMutationResultMock();
      const queryResult = queryResultMock(entryCollectionIds, true);

      useUpdateEntryCollectionsMock.mockReturnValue(mutationResult);
      useLoadEntryCollectionIdsMock.mockReturnValue(queryResult);

      const entry = dtestData.dLibraryEntry();
      const allCollections = dtestData.dLibraryCollections(6);

      const { container } = renderWithReactQuery(
         <AddToLibraryCollectionDialog
            entry={entry}
            collections={allCollections}
            open={true}
            onOpenChange={jest.fn()}
         />
      );

      await waitFor(() => {
         assertDialogRendered();
         assertEntityCollectionIdsLoadingRendered();
         assertSaveBtnDisabled();
      });

      expect(container).toMatchSnapshot();
   });

   it("AddToLibraryCollectionDialog - open true - empty library collections - test", async () => {
      const mutationResult = updateMutationResultMock();
      const queryResult = queryResultMock();

      useUpdateEntryCollectionsMock.mockReturnValue(mutationResult);
      useLoadEntryCollectionIdsMock.mockReturnValue(queryResult);

      const entry = dtestData.dLibraryEntry();

      const { container } = renderWithReactQuery(
         <AddToLibraryCollectionDialog
            entry={entry}
            collections={[]}
            open={true}
            onOpenChange={jest.fn()}
         />
      );

      await waitFor(() => {
         assertDialogRendered();
         assertCollectionsEmptyRendered();
         assertEntryCollectionIdsLoaded(entry.id, true);
      });

      expect(container).toMatchSnapshot();
   });

   it("AddToLibraryCollectionDialog - isSaving true - save button disabled - test", async () => {
      const mutationResult = mutationObserverLoadingResultMock();
      const queryResult = queryResultMock([]);

      useUpdateEntryCollectionsMock.mockReturnValue(mutationResult);
      useLoadEntryCollectionIdsMock.mockReturnValue(queryResult);

      const entry = dtestData.dLibraryEntry();
      const allCollections = dtestData.dLibraryCollections(6);

      const { container } = renderWithReactQuery(
         <AddToLibraryCollectionDialog
            entry={entry}
            collections={allCollections}
            open={true}
            onOpenChange={jest.fn()}
         />
      );

      await waitFor(() => {
         assertDialogRendered();
         assertSaveBtnDisabled();
      });

      expect(container).toMatchSnapshot();
   });

   it("AddToLibraryCollectionDialog - open false - test", async () => {
      const mutationResult = updateMutationResultMock();
      const queryResult = queryResultMock();

      useUpdateEntryCollectionsMock.mockReturnValue(mutationResult);
      useLoadEntryCollectionIdsMock.mockReturnValue(queryResult);

      const entry = dtestData.dLibraryEntry();
      const allCollections = dtestData.dLibraryCollections(6);

      const { container } = renderWithReactQuery(
         <AddToLibraryCollectionDialog
            entry={entry}
            collections={allCollections}
            open={false}
            onOpenChange={jest.fn()}
         />
      );

      await waitFor(() => {
         assertDialogNotRendered();
         assertEntryCollectionIdsLoaded(entry.id, false);
      });

      expect(container).toMatchSnapshot();
   });
});

describe("AddToLibraryCollectionDialog functionality tests", () => {
   beforeEach(() => {
      jest.clearAllMocks();

      const mutationResult = createMutationResultMock();
      useCreateCollectionMock.mockReturnValue(mutationResult);
   });

   it("AddToLibraryCollectionDialog - save btn clicked - success true - test", async () => {
      const actionResult: ActionResult = {
         success: true,
         message: "Sammlungen aktualisiert",
      };

      const allCollections = dtestData.dLibraryCollections(3);
      const collection1 = allCollections[0];
      const collection2 = allCollections[1];
      const collection3 = allCollections[2];
      const selectedIds = [collection1.id, collection2.id];

      const onOpenChange = jest.fn();
      const mutateFn = jest.fn((_params: unknown, callbacks) => {
         callbacks.onSuccess(actionResult);
      });

      const mutationResult = updateMutationResultMock(mutateFn);
      const queryResult = queryResultMock(selectedIds);

      useUpdateEntryCollectionsMock.mockReturnValue(mutationResult);
      useLoadEntryCollectionIdsMock.mockReturnValue(queryResult);

      const entry = dtestData.dLibraryEntry();

      renderWithReactQuery(
         <AddToLibraryCollectionDialog
            entry={entry}
            collections={allCollections}
            open={true}
            onOpenChange={onOpenChange}
         />
      );

      await waitFor(() => {
         assertDialogRendered();
         expect(mutateFn).not.toHaveBeenCalled();
      });

      const checkBox1 = screen.getByTestId(`collection-${collection1.id}`);
      await userEvent.click(checkBox1);

      const checkBox2 = screen.getByTestId(`collection-${collection3.id}`);
      await userEvent.click(checkBox2);

      const saveBtn = screen.getByTestId("save-btn");
      await userEvent.click(saveBtn);

      const expectedParams: UpdateCollectionIdsParams = {
         entryId: dtestData.dLibraryEntry().id,
         collectionIds: [collection2.id, collection3.id],
      };

      const expectedCallback = expect.objectContaining({
         onSuccess: expect.any(Function),
         onError: expect.any(Function),
      });

      await waitFor(() => {
         expect(mutateFn).toHaveBeenCalledTimes(1);
         expect(mutateFn).toHaveBeenCalledWith(
            expectedParams,
            expectedCallback
         );
         expect(toastMock.success).toHaveBeenCalledTimes(1);
         expect(toastMock.success).toHaveBeenCalledWith(actionResult.message);
         expect(onOpenChange).toHaveBeenCalledTimes(1);
         expect(onOpenChange).toHaveBeenCalledWith(false);
      });
   });

   it("AddToLibraryCollectionDialog - save btn clicked - success false - test", async () => {
      const actionResult: ActionResult = {
         success: false,
         message: "Fehler beim Speichern",
      };

      const allCollections = dtestData.dLibraryCollections(3);
      const collection1 = allCollections[0];
      const collection2 = allCollections[1];
      const collection3 = allCollections[2];
      const selectedIds = [collection1.id];

      const onOpenChange = jest.fn();
      const mutateFn = jest.fn((_params: unknown, callbacks) => {
         callbacks.onSuccess(actionResult);
      });

      const mutationResult = updateMutationResultMock(mutateFn);
      const queryResult = queryResultMock(selectedIds);

      useUpdateEntryCollectionsMock.mockReturnValue(mutationResult);
      useLoadEntryCollectionIdsMock.mockReturnValue(queryResult);

      const entry = dtestData.dLibraryEntry();

      renderWithReactQuery(
         <AddToLibraryCollectionDialog
            entry={entry}
            collections={allCollections}
            open={true}
            onOpenChange={onOpenChange}
         />
      );

      await waitFor(() => {
         assertDialogRendered();
         expect(mutateFn).not.toHaveBeenCalled();
      });

      const checkBox1 = screen.getByTestId(`collection-${collection2.id}`);
      await userEvent.click(checkBox1);

      const checkBox2 = screen.getByTestId(`collection-${collection3.id}`);
      await userEvent.click(checkBox2);

      const saveBtn = screen.getByTestId("save-btn");
      await userEvent.click(saveBtn);

      const expectedParams: UpdateCollectionIdsParams = {
         entryId: dtestData.dLibraryEntry().id,
         collectionIds: [collection1.id, collection2.id, collection3.id],
      };

      const expectedCallback = expect.objectContaining({
         onSuccess: expect.any(Function),
         onError: expect.any(Function),
      });

      await waitFor(() => {
         expect(mutateFn).toHaveBeenCalledTimes(1);
         expect(mutateFn).toHaveBeenCalledWith(
            expectedParams,
            expectedCallback
         );
         expect(toastMock.error).toHaveBeenCalledTimes(1);
         expect(toastMock.error).toHaveBeenCalledWith(actionResult.message);
         expect(onOpenChange).not.toHaveBeenCalled();
      });
   });

   it("AddToLibraryCollectionDialog - save btn clicked - onError - test", async () => {
      const allCollections = dtestData.dLibraryCollections(3);
      const collection1 = allCollections[0];
      const selectedIds = [collection1.id];

      const onOpenChange = jest.fn();
      const mutateFn = jest.fn((_params: unknown, callbacks) => {
         callbacks.onError();
      });

      const mutationResult = updateMutationResultMock(mutateFn);
      const queryResult = queryResultMock(selectedIds);

      useUpdateEntryCollectionsMock.mockReturnValue(mutationResult);
      useLoadEntryCollectionIdsMock.mockReturnValue(queryResult);

      const entry = dtestData.dLibraryEntry();

      renderWithReactQuery(
         <AddToLibraryCollectionDialog
            entry={entry}
            collections={allCollections}
            open={true}
            onOpenChange={onOpenChange}
         />
      );

      await waitFor(() => {
         assertDialogRendered();
      });

      const saveBtn = screen.getByTestId("save-btn");
      await userEvent.click(saveBtn);

      const expectedParams: UpdateCollectionIdsParams = {
         entryId: dtestData.dLibraryEntry().id,
         collectionIds: selectedIds,
      };

      const expectedCallback = expect.objectContaining({
         onSuccess: expect.any(Function),
         onError: expect.any(Function),
      });

      await waitFor(() => {
         expect(mutateFn).toHaveBeenCalledTimes(1);
         expect(mutateFn).toHaveBeenCalledWith(
            expectedParams,
            expectedCallback
         );
         expect(toastMock.error).toHaveBeenCalledTimes(1);
         expect(toastMock.error).toHaveBeenCalledWith(
            "Fehler beim Aktualisieren der Sammlungen"
         );
         expect(onOpenChange).not.toHaveBeenCalled();
      });
   });

   it("AddToLibraryCollectionDialog - create first collection btn clicked - test", async () => {
      const mutationResult = updateMutationResultMock();
      const queryResult = queryResultMock();

      useUpdateEntryCollectionsMock.mockReturnValue(mutationResult);
      useLoadEntryCollectionIdsMock.mockReturnValue(queryResult);

      const entry = dtestData.dLibraryEntry();

      renderWithReactQuery(
         <AddToLibraryCollectionDialog
            entry={entry}
            collections={[]}
            open={true}
            onOpenChange={jest.fn()}
         />
      );

      await waitFor(() => {
         assertDialogRendered();
         assertCreateCollectionDialogNotRendered();
      });

      const createBtn = screen.getByTestId("create-first-collection-btn");
      await userEvent.click(createBtn);

      await waitFor(() => {
         assertCreateCollectionDialogRendered();
      });
   });

   it("AddToLibraryCollectionDialog - create new collection btn clicked - test", async () => {
      const mutationResult = updateMutationResultMock();
      const queryResult = queryResultMock();

      useUpdateEntryCollectionsMock.mockReturnValue(mutationResult);
      useLoadEntryCollectionIdsMock.mockReturnValue(queryResult);

      const entry = dtestData.dLibraryEntry();
      const allCollections = dtestData.dLibraryCollections(3);
      allCollections[0].color = null;

      renderWithReactQuery(
         <AddToLibraryCollectionDialog
            entry={entry}
            collections={allCollections}
            open={true}
            onOpenChange={jest.fn()}
         />
      );

      await waitFor(() => {
         assertDialogRendered();
         assertCreateCollectionDialogNotRendered();
      });

      const createBtn = screen.getByTestId("create-new-collection-btn");
      await userEvent.click(createBtn);

      await waitFor(() => {
         assertCreateCollectionDialogRendered();
      });
   });
});
